<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab07</string>
    <string name="hello">Hello World, Lab07Activity!</string>
	<string name="welcome">欢迎登录</string>
	<string name="name">账号</string>
	<string name="password">密码</string>
	<string name="remember">记住密码</string>
	<string name="login">登录</string>
	<string name="success">保存完成</string>
	<string name="operation">操作文件</string>
	<string name="filename">文件名:</string>
	<string name="context">文件内容:</string>
	<string name="save">保存文件</string>
	<string name="read">读取文件</string>
	<string name="delete">删除文件</string>
	<string name="fail">账号或密码错误</string>
	<string name="savesuccess">保存成功</string>
	<string name="savefail">保存失败</string>
	<string name="readsuccess">读取成功</string>
	<string name="readfail">读取失败</string>
	<string name="deletesuccess">删除成功</string>
	<string name="deletefail">删除失败</string>
</resources>