<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="20dp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/name"
        android:textSize="20dp" />
    
    
    <EditText
        android:id="@+id/zhanghao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp" />
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/password"
        android:textSize="20dp" />
    
     <EditText
        android:id="@+id/mima"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:textSize="15dp" 
        android:password="true"/>

     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18dp" 
         android:text="@string/remember" 
        android:checked="true"/>

     <Button
         android:id="@+id/login"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/login" 
         android:onClick="save1"/>

</LinearLayout>