<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/operation"
        android:textSize="20dp"
        />
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
       	android:orientation="horizontal"
       
        >
     <TextView 
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/filename"
         android:textSize="15dp"
         />
     
     
        
     <AutoCompleteTextView 
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:id="@+id/Auto" >
         
    </AutoCompleteTextView>
        
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
       	android:orientation="vertical"
       
        >
     <TextView 
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/context"
         android:textSize="15dp"
         />
     
     <EditText 
         android:layout_height="200dp"
         android:layout_width="fill_parent"
         android:id="@+id/context"
         android:textSize="15dp"
         />
        
    </LinearLayout>
    
     
     <Button 
         android:layout_width="fill_parent"
       	 android:layout_height="wrap_content"
       	 android:id="@+id/save"
       	 android:text="@string/save"
         />
     
     <Button 
         android:layout_width="fill_parent"
       	 android:layout_height="wrap_content"
       	 android:id="@+id/read"
       	 android:text="@string/read"
         />
    
     <Button 
         android:layout_width="fill_parent"
       	 android:layout_height="wrap_content"
       	 android:id="@+id/delete"
       	 android:text="@string/delete"
         />

</LinearLayout>